# receipt_parser_api

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  models.py  pyproject.toml  receipt_parser_service.py
app/: main.py  receipt_parser_service.py
